--- a/src/main/webapp/views/index/version.html
+++ b/src/main/webapp/views/index/version.html
@@ -47,7 +47,7 @@
         <div class="row small-spacing">
             <div class="col-sm-12 div_select">
                 <form class="form-horizontal">
-                    <div class="col-sm-12 div_title">Release notes <a target='_blank' href="https://github.com/"
+                    <div class="col-sm-12 div_title">Release notes <a target='_blank' href="https://github.com/BSN-Spartan/Data-Center-System/releases"
                                                                       class="ico-item" style="font-size: 16px">&nbsp;&nbsp;&nbsp;&nbsp;Version</a>
                     </div>
                 </form>
