--- a/src/main/webapp/views/user/list.html
+++ b/src/main/webapp/views/user/list.html
@@ -56,7 +56,7 @@
 
             <div class="col-sm-12 div_list">
                 <button type="button" class="btn btn-info btn-xs waves-effect waves-light" style="margin-top: 10px;"
-                        data-toggle="modal" data-target="#addModal">add
+                        data-toggle="modal" data-target="#addModal">New User
                 </button>
                 <div class="col-sm-12 div_title">User List</div>
                 <table id="user_list_" class="table table-striped table-bordered display"></table>
