--- a/src/main/webapp/views/main/index.html
+++ b/src/main/webapp/views/main/index.html
@@ -86,6 +86,7 @@
 <script src="/static/js/custom/custom.req.js"></script>
 
 
+<script src="/static/js/views/common/crypto-js.js"></script>
 <script src="/static/js/views/index.js?<%=new Date().getTime()%>"></script>
 
 </body>
