--- a/src/main/webapp/views/node/list.html
+++ b/src/main/webapp/views/node/list.html
@@ -134,7 +134,7 @@
                             </label>
                             <div class="col-sm-8">
                                 <textarea type="text" class="form-control" id="nodeCode" name="nodeCode" rows="1"
-                                          cols="54"></textarea> <a target='_blank' href="https://github.com/" class="ico-item" style="font-size: 12px">how to get it</a>
+                                          cols="54"></textarea> <a target='_blank' href="/static/conf/nodeConf.html" class="ico-item" style="font-size: 12px">how to get it</a>
                             </div>
                         </div>
                         <div class="form-group col-sm-12 ">
@@ -143,7 +143,7 @@
                             </label>
                             <div class="col-sm-8">
                                 <textarea type="text" class="form-control" id="nodeAddress" name="nodeAddress" rows="1"
-                                          cols="54"></textarea><a target='_blank' href="https://github.com/" class="ico-item" style="font-size: 12px">how to get it</a>
+                                          cols="54"></textarea><a target='_blank' href="/static/conf/nodeConf.html" class="ico-item" style="font-size: 12px">how to get it</a>
                             </div>
 
                         </div>
@@ -153,7 +153,7 @@
                             </label>
                             <div class="col-sm-8">
                                 <textarea type="text" class="form-control" id="applySign" name="applySign" rows="1"
-                                          cols="54"></textarea><a target='_blank' href="https://github.com/" class="ico-item" style="font-size: 12px">how to get it</a>
+                                          cols="54"></textarea><a target='_blank' href="/static/conf/nodeConf.html" class="ico-item" style="font-size: 12px">how to get it</a>
                             </div>
                         </div>
                         <div class="form-group col-sm-12 ">
@@ -162,7 +162,7 @@
                             </label>
                             <div class="col-sm-8">
                                 <input type="text" class="form-control" id="rpcAddress"
-                                       name="rpcAddress"><a target='_blank' href="https://github.com/" class="ico-item" style="font-size: 12px">how to get it</a>
+                                       name="rpcAddress"><a target='_blank' href="/static/conf/nodeConf.html" class="ico-item" style="font-size: 12px">how to get it</a>
                             </div>
                         </div>
                         <div class="form-group col-sm-12 ">
