--- a/src/main/webapp/views/support/support.html
+++ b/src/main/webapp/views/support/support.html
@@ -94,7 +94,7 @@
                         <label class="col-sm-2 control-label"><img src="/static/images/system/tsw.png"
                                                                    style="width: 25px;height: 25px">&nbsp;&nbsp;Whatsapp:</label>
                         <div class="col-sm-8 div_top">
-                            <a href="https://t.me/bsnsupport" target="_blank">https://wa.me/message/NZHR673VIGL2M1</a>
+                            <a href="https://chat.whatsapp.com/H9wENt0lw4dFTVopaILFxh" target="_blank">https://chat.whatsapp.com/H9wENt0lw4dFTVopaILFxh</a>
                         </div>
                     </div>
 
