--- a/src/main/webapp/views/financial/refundList.html
+++ b/src/main/webapp/views/financial/refundList.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="col-sm-5">
                         <div class="form-group">
-                            <label for="otherTradeNo" class="col-sm-4 control-label">Third Party Refund No.:</label>
+                            <label for="otherTradeNo" class="col-sm-4 control-label">Refund Transaction No.:</label>
                             <div class="col-sm-8">
                                 <input type="text" class="form-control" id="otherTradeNo">
                             </div>
