--- a/src/main/webapp/views/financial/orderList.html
+++ b/src/main/webapp/views/financial/orderList.html
@@ -81,6 +81,17 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-sm-5">
+                        <div class="form-group">
+                            <label for="chainId" class="col-sm-4 control-label">Chain Name:</label>
+                            <div class="col-sm-8">
+                                <select class="form-control" id="chainId">
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-sm-5">
                         <div class="form-group">
                             <label for="date-range" class="col-sm-4 control-label">Created Time:</label>
@@ -101,7 +112,7 @@
                     </div>
 
                     <div class="col-sm-5">
-                        <div class="form-group2">
+                        <div class="form-group">
                             <label for="date-range_u" class="col-sm-4 control-label">Payment Time:</label>
                             <div class="col-sm-8">
                                 <div class="input-daterange input-group" id="date-range_u">
@@ -153,7 +164,7 @@
                             <div class="col-sm-8">
                                 <select class="form-control" id="isRefund" SIZE="">
                                     <OPTION VALUE="">All
-                                    <OPTION VALUE="0">No Refund
+                                    <OPTION VALUE="0">Not Refunded
                                     <OPTION VALUE="1">Refund
                                 </select>
                             </div>
@@ -226,7 +237,7 @@
                                     <button type="button"
                                             class="btn btn-default waves-effect waves-light btn-xs confirm_but_ i18n"
                                             data-dismiss="modal">
-                                        Close
+                                        Cancel
                                     </button>
                                 </div>
                             </div>
@@ -265,7 +276,7 @@
 
                         <div class="form-group col-sm-12 ">
                             <label for="textareaRemarks" class="col-sm-4 control-label"><span
-                                    class="xin">*</span>Comment:
+                                    class="xin">*</span>Remark:
                             </label>
                             <div class="col-sm-8">
                                 <textarea type="text" class="form-control" maxlength="200" id="textareaRemarks"
@@ -283,7 +294,7 @@
                                     <button type="button"
                                             class="btn btn-default waves-effect waves-light btn-xs confirm_but_ i18n"
                                             data-dismiss="modal">
-                                        Close
+                                        Cancel
                                     </button>
                                 </div>
                             </div>
@@ -331,7 +342,7 @@
                                     <button type="button"
                                             class="btn btn-default waves-effect waves-light btn-xs confirm_but_ i18n"
                                             data-dismiss="modal">
-                                        Close
+                                        Cancel
                                     </button>
                                 </div>
                             </div>
