--- a/src/main/webapp/views/financial/orderListDetails.html
+++ b/src/main/webapp/views/financial/orderListDetails.html
@@ -60,29 +60,39 @@
 
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Order No.：</label>
+                            <label class="col-sm-4 control-label">Order No.:</label>
                             <div class="col-sm-8 content_" id="tradeNo" style="word-break: break-word;">
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Wallet Address：</label>
-                            <div class="col-sm-8 content_" id="accountAddress" style="word-break: break-word;">
+                            <label class="col-sm-4 control-label">Chain Name:</label>
+                            <div class="col-sm-8 content_" id="chainName" style="word-break: break-word;">
                             </div>
                         </div>
                     </div>
+
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Payment Amount：</label>
+                            <label class="col-sm-4 control-label">Payment Amount:</label>
                             <div class="col-sm-8 content_" id="payAmount">
                             </div>
 
                         </div>
                     </div>
+
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Gas Credit Amount：</label>
+                            <label class="col-sm-4 control-label">Wallet Address:</label>
+                            <div class="col-sm-8 content_" id="accountAddress" style="word-break: break-word;">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label class="col-sm-4 control-label">Gas Credit Amount:</label>
                             <div class="col-sm-8 content_" id="gasCount">
                             </div>
                         </div>
@@ -95,21 +105,21 @@
 
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="i18n col-sm-4 control-label">Third Party Transaction No.：</label>
+                            <label class="i18n col-sm-4 control-label">Third Party Transaction No.:</label>
                             <div class="col-sm-8 content_" id="otherTradeNo" style="word-break: break-word;">
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Payment Method：</label>
+                            <label class="col-sm-4 control-label">Payment Method:</label>
                             <div class="col-sm-8 content_" id="payType">
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Payment Time：</label>
+                            <label class="col-sm-4 control-label">Payment Time:</label>
                             <div class="col-sm-8 content_" id="payTime">
                             </div>
 
@@ -117,7 +127,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Payment Status：</label>
+                            <label class="col-sm-4 control-label">Payment Status:</label>
                             <div class="col-sm-8 content_" id="payState">
                             </div>
                         </div>
@@ -131,21 +141,21 @@
 
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="i18n col-sm-4 control-label">Top Up Status：</label>
+                            <label class="i18n col-sm-4 control-label">Top Up Status:</label>
                             <div class="col-sm-8 content_" id="gasRechargeState">
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Top Up Time：</label>
+                            <label class="col-sm-4 control-label">Top Up Time:</label>
                             <div class="col-sm-8 content_" id="gasTxTime">
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Transaction Hash：</label>
+                            <label class="col-sm-4 control-label">Transaction Hash:</label>
                             <div class="col-sm-8 content_" id="gasTxHash" style="word-break: break-word;">
                             </div>
 
@@ -159,21 +169,21 @@
 
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="i18n col-sm-4 control-label">Refund Order No.：</label>
+                            <label class="i18n col-sm-4 control-label">Refund Order No.:</label>
                             <div class="col-sm-8 content_" id="dprTradeNo">
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Third Party Refund No.：</label>
+                            <label class="col-sm-4 control-label">Third Party Refund No.:</label>
                             <div class="col-sm-8 content_" id="dprOtherTradeNo">
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Operator：</label>
+                            <label class="col-sm-4 control-label">Operator:</label>
                             <div class="col-sm-8 content_" id="operator">
                             </div>
 
@@ -181,28 +191,28 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Operation Time：</label>
+                            <label class="col-sm-4 control-label">Operation Time:</label>
                             <div class="col-sm-8 content_" id="operationTime">
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Refund Time：</label>
+                            <label class="col-sm-4 control-label">Refund Time:</label>
                             <div class="col-sm-8 content_" id="refundTime">
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label class="col-sm-4 control-label">Refund Status：</label>
+                            <label class="col-sm-4 control-label">Refund Status:</label>
                             <div class="col-sm-8 content_" id="refundState">
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">Remark：</label>
+                            <label class="col-sm-2 control-label">Remark:</label>
                             <div class="col-sm-8 content_" id="remarks">
                             </div>
                         </div>
