--- a/src/main/webapp/views/node/list.html
+++ b/src/main/webapp/views/node/list.html
@@ -202,7 +202,7 @@
                                 <button type="button"
                                         class="btn btn-default waves-effect waves-light btn-xs confirm_but_ i18n"
                                         data-dismiss="modal">
-                                    Close
+                                    Cancel
                                 </button>
                             </div>
                             <div class="center-box">
