--- a/src/main/webapp/views/price/list.html
+++ b/src/main/webapp/views/price/list.html
@@ -189,7 +189,7 @@
                                 <button type="button"
                                         class="btn btn-default waves-effect waves-light btn-xs confirm_but_ i18n"
                                         data-dismiss="modal">
-                                    Close
+                                    Cancel
                                 </button>
                             </div>
                         </div>
