--- a/src/main/webapp/views/recharge/list.html
+++ b/src/main/webapp/views/recharge/list.html
@@ -75,6 +75,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="col-sm-5">
                         <div class="form-group">
                             <label for="txType" class="col-sm-4 control-label">Wallet Address:</label>
@@ -217,7 +218,7 @@
                                 <button type="button"
                                         class="btn btn-default waves-effect waves-light btn-xs confirm_but_ i18n"
                                         data-dismiss="modal">
-                                    Close
+                                    Cancel
                                 </button>
                             </div>
                             <div id="keystore_info_already_exists" text-align="center" >
