--- a/src/main/webapp/views/setting/baseInfo.html
+++ b/src/main/webapp/views/setting/baseInfo.html
@@ -64,6 +64,11 @@
                             <div class="col-sm-4">
                                 <input type="text" class="form-control" name="title" id="title"
                                        placeholder="BSN Spartan Network Data Center Portal">
+                                <hr/>
+                                <p style="font-size: 12px;color: red">
+                                    This value will replace the name on the browser bar.
+                                </p>
+
                             </div>
                         </div>
                     </div>
@@ -102,6 +107,10 @@
                             <div class="col-sm-4">
                                 <input type="text" class="form-control" name="headline" id="headline"
                                        placeholder="BSN Spartan Network Data Center Portal">
+                                <hr/>
+                                <p style="font-size: 12px;color: red">
+                                    This value will replace the title of the portal and the title of the email.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -112,7 +121,7 @@
                                     class="xin">*</span>Introduction:</label>
                             <div class="col-sm-4">
                                 <textarea class="form-control" name="introduce" id="introduce" rows="3"
-                                          placeholder="BSN Spartan Data Center is a lightweight software platform based on the Spartan Network. In the data center, the operator can install and access nodes of the public chain, the mission of the Spartan. By removing cryptocurrency from the first layer of the public chain, the mission of Spartan Network is to provide all IT systems around the world with public chain services for non-cryptocurrency, so as to gain the benefits of the infrastructure of this public IT system."></textarea>
+                                          placeholder="BSN Spartan Data Center is a lightweight software platform that provides access to the Spartan Network. In the data center, the operator can install and access nodes of the public chain, the mission of the Spartan. By removing cryptocurrency from the first layer of the public chain, the mission of the Spartan Network is to provide all IT systems around the world with non-cryptocurrency public chain services, so as to to gain the benefits of a public IT infrastructure."></textarea>
                             </div>
                         </div>
                     </div>
