--- a/src/main/webapp/views/setting/paymentType.html
+++ b/src/main/webapp/views/setting/paymentType.html
@@ -128,7 +128,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label"></label>
                             <div class="col-sm-4">
-                                <a href="https://dashboard.stripe.com/test/apikeys" target="_blank">how to git it</a>
+                                <a href="https://dashboard.stripe.com/test/apikeys" target="_blank">how to get it</a>
                             </div>
                         </div>
                     </div>
@@ -145,7 +145,8 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label"></label>
                             <div class="col-sm-4">
-                                <a href="https://dashboard.stripe.com/test/webhooks" target="_blank">how to git it</a>
+                                   Click<a href="https://dashboard.stripe.com/test/webhooks" target="_blank"> here</a>
+                                to add an endpoint, endpoint URL: "domain_name/v1/payment/stripe/callback"
                             </div>
                         </div>
                     </div>
@@ -174,7 +175,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label"></label>
                             <div class="col-sm-4">
-                                <a href="https://beta.commerce.coinbase.com/settings/security" target="_blank">how to git it</a>
+                                <a href="https://beta.commerce.coinbase.com/settings/security" target="_blank">how to get it</a>
                             </div>
                         </div>
                     </div>
