--- a/src/main/webapp/views/dashboard/dashboard.html
+++ b/src/main/webapp/views/dashboard/dashboard.html
@@ -203,7 +203,7 @@
                                 <button type="button"
                                         class="btn btn-default waves-effect waves-light btn-xs confirm_but_ i18n"
                                         data-dismiss="modal">
-                                    Close
+                                    Cancel
                                 </button>
                             </div>
                         </div>
@@ -275,7 +275,7 @@
                                     <button type="button"
                                             class="btn btn-default waves-effect waves-light btn-xs confirm_but_ i18n"
                                             data-dismiss="modal">
-                                        Close
+                                        Cancel
                                     </button>
                                 </div>
                             </div>
