--- a/src/main/webapp/views/index/version.html
+++ b/src/main/webapp/views/index/version.html
@@ -68,6 +68,22 @@
                 <div class="activity-list" style="margin-top: 20px; padding: 0 20px;">
 
                     <div class="activity-item">
+                        <div class="bar bg-primary">
+                            <div class="dot bg-primary"></div>
+                        </div>
+                        <div class="content">
+                            <div class="date">V 1.1.1 November 30, 2022</div>
+                            <div class="text">
+                                <ul class="version_ul">
+                                    <li>Update email content</li>
+                                    <li>Fix some bugs</li>
+                                    <li>Improve user experience</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="activity-item">
                         <div class="bar bg-success">
                             <div class="dot bg-success"></div>
                         </div>
@@ -80,10 +96,6 @@
                                     <li>Add Financial Management module to the Data Center Management System, which enables the portal to manage the Gas Credit top-up function;</li>
                                     <li>Add Portal Settings module to the Data Center Management System, allow the portal to customize the logo, home page introduction, title, technical support and contact information, copyright information, portal payment methods and other configurations.</li>
                                 </ul>
-<!--                                1.&nbsp;&nbsp;Add Data Center Portal System, end-users can get node access information and top up Gas Credit through the portal;<br/>-->
-<!--                                2.&nbsp;&nbsp;Optimize the node access method, end-users need to access the node by the URL of "gateway/chain ID/access key". Data Center Operators can set the gateway, chain ID, TPS and TPD in the Data Center Management System; it can also manage the Access Key of portal users;<br/>-->
-<!--                                3.&nbsp;&nbsp;Add Financial Management module to the Data Center Management System, which enables the portal to manage the Gas Credit top-up function;<br/>-->
-<!--                                4.&nbsp;&nbsp;Add Portal Settings module to the Data Center Management System, allow the portal to customize the logo, home page introduction, title, technical support and contact information, copyright information, portal payment methods and other configurations.<br/>-->
                             </div>
                         </div>
                     </div>
@@ -99,13 +111,8 @@
                                     <li>Integrate Spartan-I Chain (Powered by NC-Ethereum), Spartan-II Chain (Powered by NC-Cosmos), Spartan-III Chain (Powered by NC-PolygonEdge);</li>
                                     <li>Non-Cryptocurrency Public Chain Node Establishment, and Node Status Monitoring;</li>
                                     <li>NTT Wallet Balance Monitoring;</li>
-                                    <li>Top-Up the Gas Credit of your NTT Wallet and Monitor Gas Credit Balance.</li>
+                                    <li>Top Up the Gas Credit of your NTT Wallet and Monitor Gas Credit Balance.</li>
                                 </ul>
-<!--                                1.&nbsp;&nbsp;Integrate Spartan-I Chain (Powered by NC-Ethereum), Spartan-II Chain (Powered by-->
-<!--                                NC-Cosmos), Spartan-III Chain (Powered by NC-PolygonEdge).<br/>-->
-<!--                                2.&nbsp;&nbsp;Non-Cryptocurrency Public Chain Node Establishment, and Node Status Monitoring.<br/>-->
-<!--                                3.&nbsp;&nbsp;NTT Wallet Balance Monitoring.<br/>-->
-<!--                                4.&nbsp;&nbsp;Top-Up the Gas Credit of your NTT Wallet and Monitor Gas Credit Balance.<br/>-->
                             </div>
                         </div>
                     </div>
