--- a/src/main/webapp/views/user/list.html
+++ b/src/main/webapp/views/user/list.html
@@ -107,7 +107,7 @@
                     <button type="button" id="add_user_btn"
                             class="btn btn-info btn-xs waves-effect waves-light submit_">Submit
                     </button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel
                     </button>
                 </form>
             </div>
@@ -166,6 +166,6 @@
 <script src="/static/js/custom/custom.validate.js"></script>
 
 <script src="/static/js/views/common/crypto-js.js"></script>
-<script src="/static/js/views/user/user_list.js?<%=new Date().getTime()%>"></script>
+<script src="/static/js/views/user/user_list.js"></script>
 </body>
 </html>
